--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,120 +1,213 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap"
-      rel="stylesheet"
-    />
-    <title>Dokumentacja</title>
-  </head>
-  <style>
-    * {
-      font-family: "Work Sans", sans-serif;
-      box-sizing: border-box;
-    }
-    body {
-      display: flex;
-      flex-direction: column;
-      max-width: 1200px;
-      margin: 0 auto 100px auto;
-      padding: 0 20px;
-      gap: 10px;
-    }
-    h1 {
-      font-size: 72px;
-      font-weight: 900;
-    }
-    h2 {
-      font-size: 24px;
-      font-weight: 700;
-    }
-    span {
-      margin: 0;
-      padding: 0;
-      font-weight: 300;
-    }
-    .type {
-      font-size: 18px;
-      font-weight: 400;
-      color: blue;
-    }
-    .path {
-      width: 200px;
-      margin: 4px auto 4px 0;
-      padding: 8px 20px;
-      font-size: 24px;
-      font-weight: 300;
-      color: yellowgreen;
-      background-color: rgba(0, 0, 0, 0.8);
-      border-radius: 20px;
-      text-align: center;
-    }
-    .intro {
-      max-width: 768px;
-      text-align: justify;
-    }
-  </style>
-  <body>
-    <h1>Dokumentacja</h1>
-    <div class="intro">
-      <p>
-        Api ma na celu obsługe zarządzania postami w aplikacjach działających
-        jak tablice ogłoszeń. Celem pracy była prostota i łatwość korzystania z
-        tego rozwiązania.
-      </p>
-      <p>Autorami tego api są Marcin Czaniecki i Agata Karczewska</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap"
+    rel="stylesheet" />
+  <title>Dokumentacja</title>
+</head>
+<style>
+  * {
+    font-family: "Work Sans", sans-serif;
+    box-sizing: border-box;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto 100px auto;
+    padding: 0 20px;
+    gap: 10px;
+    background-color: #161823;
+    color: #fff;
+  }
+
+  h1 {
+    font-size: 72px;
+    font-weight: 900;
+  }
+
+  h2 {
+    font-size: 24px;
+    font-weight: 700;
+  }
+
+  span {
+    margin: 0;
+    padding: 0;
+    font-weight: 300;
+  }
+
+  .type {
+    font-size: 18px;
+    font-weight: 400;
+    color: #9bd6e8;
+  }
+
+  .path {
+    width: 200px;
+    margin: 4px auto 4px 0;
+    padding: 8px 20px;
+    font-size: 24px;
+    font-weight: 300;
+    color: #161823;
+    background-color: #9bd6e8;
+    border-radius: 20px;
+    text-align: center;
+  }
+
+  .intro {
+    max-width: 768px;
+    text-align: justify;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  .sources li {
+    margin-bottom: 10px;
+  }
+
+  .sources li a {
+    padding-bottom: 5px;
+    text-decoration: none;
+    color: #9bd6e8;
+    border-bottom: 2px solid #9bd6e800;
+  }
+
+  .sources li a:hover {
+    border-bottom: 2px solid #9bd6e8;
+    transition: 500ms;
+  }
+</style>
+
+<body>
+  <h1>Dokumentacja</h1>
+  <div class="intro">
+    <p>
+      Api ma na celu obsługe zarządzania postami w aplikacjach działających
+      jak tablice ogłoszeń. Celem pracy była prostota i łatwość korzystania z
+      tego rozwiązania.
+    </p>
+    <b>
+      Projekt wykorzystuje następujące pakiety:
+    </b>
+    <ul class="sources">
+      <li><a href="https://github.com/ljharb/qs" target="_blank">qs</a></li>
+      <li><a href="https://github.com/lodash/lodash" target="_blank">lodash</a></li>
+      <li><a href="https://github.com/motdotla/dotenv" target="_blank">dotenv</a></li>
+      <li><a href="https://github.com/expressjs/express" target="_blank">express</a></li>
+      <li><a href="https://github.com/jaredhanson/passport" target="_blank">passport</a></li>
+      <li><a href="https://github.com/auth0/node-jsonwebtoken" target="_blank">jsonwebtoken</a></li>
+      <li><a href="https://github.com/Automattic/mongoose" target="_blank">mongoose</a></li>
+      <li><a href="https://github.com/mikenicholson/passport-jwt" target="_blank">passport-jwt</a></li>
+      <li><a href="https://github.com/jaredhanson/passport-local" target="_blank">passport-local</a></li>
+      <li><a href="https://github.com/talha-asad/mongoose-url-slugs" target="_blank">mongoose-url-slugs</a></li>
+      <li><a href="https://github.com/mixmaxhq/mongo-cursor-pagination" target="_blank">mongo-cursor-pagination</a>
+      <li><a href="https://github.com/saintedlama/passport-local-mongoose" target="_blank">passport-local-mongoose</a>
+      </li>
+    </ul>
+    <p>Autorami tego api są Marcin Czaniecki i Agata Karczewska</p>
+    <img src="https://i.ibb.co/3fWDpcj/pobrane.png" alt="Mapa API">
+  </div>
+  <div>
+    <h2>Dokumentacja api</h2>
+    <div>
+      <p class="type">Typ: get</p>
+      <span>endpoint: </span>
+      <p class="path">/</p>
+    </div>
+  </div>
+  <div>
+    <h2>Pobierz wszystkie posty</h2>
+    <div>
+      <p class="type">Typ: get</p>
+      <span>endpoint: </span>
+      <p class="path">/posts</p>
     </div>
     <div>
-      <h2>Dokumentacja api</h2>
+      <p class="type">Query</p>
       <div>
-        <p class="type">Typ: get</p>
-        <span>endpoint: </span>
-        <p class="path">/</p>
+        <p>limit - Ile elementów będziemy pobierać. Domyślnie ustawiony na 2 (Zapytanie zwróci 2 elementy)</p>
       </div>
+      <p class="type">Zwracany nagłówki (Headers)</p>
+      <div>
+        <p>next - link z zapytaniem do serwera o kolejne 2 elementy</p>
+        <p>previous - link z zapytaniem do serwera o poprzednie 2 elementy </p>
+      </div>
+    </div>
+  </div>
+  <div>
+    <h2>Pobierz wszystkie posty posiadające odpowienie query</h2>
+    <div>
+      <p class="type">Typ: get</p>
+      <span>endpoint: </span>
+      <p class="path">/posts/search</p>
     </div>
     <div>
-      <h2>Pobierz wszystkie posty</h2>
+      <p class="type">Query</p>
       <div>
-        <p class="type">Typ: get</p>
-        <span>endpoint: </span>
-        <p class="path">/posts</p>
+        <p>offset - Od którego obiektu zaczynamy pobierać elementy. Domyślnie ustawiony na 0</p>
+        <p>per_page - Ile elementów będziemy pobierać. Domyślnie ustawiony na 2 (Zapytanie zwróci 2 elementy)</p>
+        <p>sort_by - Sortuj według tego właściwości elementów. Domyślnie ustawiony na createdAt</p>
+        <p>order_by - W jaki sposób ma być sortowane. Domyślnie ustawiony na desc</p>
       </div>
     </div>
+  </div>
+  <div>
+    <h2>Pobierz jeden post</h2>
     <div>
-      <h2>Pobierz jeden post</h2>
-      <div>
-        <p class="type">Typ: get</p>
-        <span>endpoint: </span>
-        <p class="path">/posts/:id</p>
-      </div>
+      <p class="type">Typ: get</p>
+      <span>endpoint: </span>
+      <p class="path">/posts/:slug</p>
     </div>
+  </div>
+  <div>
+    <h2>Dodaj post</h2>
     <div>
-      <h2>Dodaj post</h2>
-      <div>
-        <p class="type">Typ: POST</p>
-        <span>endpoint: </span>
-        <p class="path">/posts/add</p>
-      </div>
+      <p class="type">Typ: POST</p>
+      <span>endpoint: </span>
+      <p class="path">/posts</p>
     </div>
+  </div>
+  <div>
+    <h2>Edytuj post</h2>
     <div>
-      <h2>Edytuj post</h2>
-      <div>
-        <p class="type">Typ: PUT</p>
-        <span>endpoint: </span>
-        <p class="path">/posts/edit</p>
-      </div>
+      <p class="type">Typ: PUT</p>
+      <span>endpoint: </span>
+      <p class="path">/posts/:slug</p>
     </div>
+  </div>
+  <div>
+    <h2>Usuń post</h2>
     <div>
-      <h2>Usuń post</h2>
-      <div>
-        <p class="type">Typ: DELETE</p>
-        <span>endpoint: </span>
-        <p class="path">/posts/remove</p>
-      </div>
+      <p class="type">Typ: DELETE</p>
+      <span>endpoint: </span>
+      <p class="path">/posts/:slug</p>
     </div>
-  </body>
+  </div>
+  <div class="intro">
+    <h3>Nieoczywiste</h3>
+    <span>slug - przyjazna unikatowa nazwa elementu, jeżeli nie jest znana można wpisać id elementu.</span>
+  </div>
+  <div class="intro">
+    <h2>Struktura posta</h2>
+    <p>Post jest skonstruowany za pomocą mongoose schema i wyeksportowany jako model</p>
+    <img src="https://i.ibb.co/cCkWrpL/post-model.png" alt="struktura schematu api">
+  </div>
+  <div class="intro">
+    <h2>Autoryzacja użytkownika</h2>
+    <p>Do autoryzacji użytkownika wykorzystujemy middleware
+      passport jest to zestaw wtyczej (strategie),
+      które umożliwają utworzenie prostej autoryzacji w kodzie aplikacji.</p>
+  </div>
+</body>
+
 </html>
