--- a/src/public/index.html
+++ b/src/public/index.html
@@ -158,6 +158,7 @@
         <p>per_page - Ile elementów będziemy pobierać. Domyślnie ustawiony na 2 (Zapytanie zwróci 2 elementy)</p>
         <p>sort_by - Sortuj według tego właściwości elementów. Domyślnie ustawiony na createdAt</p>
         <p>order_by - W jaki sposób ma być sortowane. Domyślnie ustawiony na desc</p>
+        <p>q - Wyszukiwanie w title słów kluczowych</p>
       </div>
     </div>
   </div>
